--- a/i18n/locales/he/meta.json
+++ b/i18n/locales/he/meta.json
@@ -55,6 +55,10 @@
     "support": {
       "title": "תמיכה - Anxiety Aid Tools",
       "description": "קבל עזרה עם Anxiety Aid Tools. שאלות נפוצות, פרטי יצירת קשר ופתרון בעיות עבור אפליקציית ניהול החרדה שלנו."
+    },
+    "mobile": {
+      "title": "אפליקציות לנייד - Anxiety Aid Tools ל-iOS ו-Android",
+      "description": "הורד את אפליקציית Anxiety Aid Tools ל-iOS ו-Android. טכניקות הרגעה חינמיות בדרכים - תרגילי נשימה, הארקה ועוד."
     }
   }
 }
