--- a/i18n/locales/he/pages.json
+++ b/i18n/locales/he/pages.json
@@ -53,6 +53,12 @@
       ]
     }
   },
+  "mobileAppBanner": {
+    "text": "אפליקציות נייד חינמיות זמינות כעת",
+    "cta": "מידע נוסף",
+    "dismiss": "סגור"
+  },
+
   "footer": {
     "title": "כלי עזר לחרדה",
     "description": "כלי קוד פתוח וחינמיים שיעזרו לך למצוא רוגע כאשר אתה זקוק לכך ביותר.",
@@ -61,6 +67,61 @@
       "title": "תרום",
       "github": "גיטהאב",
       "discussions": "דיונים"
+    }
+  },
+
+  "mobile": {
+    "title": "אפליקציות לנייד",
+    "description": "קח את כלי העזר לחרדה איתך לכל מקום. הורד את האפליקציה שלנו למכשירי iOS ו-Android.",
+    "ios": {
+      "title": "אפליקציית iOS",
+      "subtitle": "זמינה ב-App Store",
+      "description": "הורד את האפליקציה שלנו מ-Apple App Store עבור ה-iPhone או ה-iPad שלך. קבל גישה מיידית לכל טכניקות ההרגעה מכל מקום.",
+      "button": "App Store"
+    },
+    "android": {
+      "title": "אפליקציית Android",
+      "subtitle": "הורדת APK ישירה",
+      "description": "קבל את גרסת Android של כלי העזר לחרדה. אנחנו עובדים על הפצת האפליקציה ב-Google Play Store.",
+      "status": {
+        "title": "בקרוב ב-Play Store",
+        "description": "אנחנו עובדים על פרסום האפליקציה שלנו ב-Google Play Store. בינתיים, תוכל להוריד את קובץ ה-APK ישירות ולהתקין אותו במכשיר ה-Android שלך."
+      },
+      "button": "הורד APK",
+      "instructions": {
+        "title": "איך להתקין APK ב-Android",
+        "steps": [
+          "הורד את קובץ ה-APK באמצעות הכפתור למעלה",
+          "פתח את הגדרות המכשיר שלך ונווט לאבטחה או פרטיות",
+          "הפעל 'התקנת אפליקציות ממקורות לא ידועים' או 'אפשר ממקור זה'",
+          "פתח את קובץ ה-APK שהורדת מתיקיית ההורדות",
+          "עקוב אחר ההוראות על המסך להשלמת ההתקנה",
+          "לאחר ההתקנה, תוכל לכבות 'מקורות לא ידועים' לבטיחות"
+        ]
+      }
+    },
+    "features": {
+      "title": "תכונות האפליקציה",
+      "items": [
+        "גישה לכל טכניקות ההרגעה במצב לא מקוון",
+        "תרגילי נשימה מודרכים עם משוב מישוש",
+        "כלים אינטראקטיביים להארקה וחזון מודרך",
+        "עקוב אחר ההתקדמות שלך וטכניקות מועדפות",
+        "תמיכה במצב כהה לשימוש נוח בכל זמן",
+        "ללא פרסומות, ללא מעקב, בחינם לחלוטין וקוד פתוח"
+      ]
+    },
+    "privacy": {
+      "title": "הפרטיות שלך חשובה",
+      "description": "כל הנתונים שלך נשארים במכשיר שלך. אנחנו לא אוספים, שומרים או משתפים מידע אישי כלשהו. אין צורך בחשבון."
+    },
+    "support": {
+      "description": "צריך עזרה עם האפליקציה או יש שאלות?",
+      "link": "בקר בדף התמיכה"
+    },
+    "screenshots": {
+      "title": "תצוגה מקדימה של האפליקציה",
+      "hint": "גלול כדי לראות עוד"
     }
   }
 }
