--- a/i18n/locales/ru/meta.json
+++ b/i18n/locales/ru/meta.json
@@ -55,6 +55,10 @@
     "support": {
       "title": "Поддержка - Anxiety Aid Tools",
       "description": "Получите помощь с Anxiety Aid Tools. FAQ, контактная информация и устранение неполадок для нашего приложения по управлению тревожностью."
+    },
+    "mobile": {
+      "title": "Мобильные приложения - Anxiety Aid Tools для iOS и Android",
+      "description": "Скачайте мобильное приложение Anxiety Aid Tools для iOS и Android. Бесплатные техники снижения тревоги на ходу - дыхательные упражнения, заземление и многое другое."
     }
   }
 }
