--- a/i18n/locales/ru/pages.json
+++ b/i18n/locales/ru/pages.json
@@ -58,6 +58,12 @@
       ]
     }
   },
+  "mobileAppBanner": {
+    "text": "Бесплатные мобильные приложения уже доступны",
+    "cta": "Подробнее",
+    "dismiss": "Закрыть"
+  },
+
   "footer": {
     "title": "Инструменты помощи при тревоге",
     "description": "Бесплатные инструменты с открытым кодом для нахождения спокойствия в нужный момент.",
@@ -66,6 +72,61 @@
       "title": "Помочь проекту",
       "github": "GitHub",
       "discussions": "Обсуждения"
+    }
+  },
+
+  "mobile": {
+    "title": "Мобильные приложения",
+    "description": "Возьмите Anxiety Aid Tools с собой куда угодно. Скачайте наше приложение для iOS и Android.",
+    "ios": {
+      "title": "Приложение iOS",
+      "subtitle": "Доступно в App Store",
+      "description": "Скачайте приложение из Apple App Store для вашего iPhone или iPad. Получите мгновенный доступ ко всем техникам снижения тревоги где бы вы ни были.",
+      "button": "App Store"
+    },
+    "android": {
+      "title": "Приложение Android",
+      "subtitle": "Прямая загрузка APK",
+      "description": "Получите Android версию Anxiety Aid Tools. Мы работаем над публикацией приложения в Google Play Store.",
+      "status": {
+        "title": "Скоро в Play Store",
+        "description": "Мы работаем над публикацией приложения в Google Play Store. А пока вы можете скачать APK-файл напрямую и установить его на Android-устройство."
+      },
+      "button": "Скачать APK",
+      "instructions": {
+        "title": "Как установить APK на Android",
+        "steps": [
+          "Скачайте APK-файл с помощью кнопки выше",
+          "Откройте Настройки устройства и перейдите в Безопасность или Конфиденциальность",
+          "Включите «Установка из неизвестных источников» или «Разрешить из этого источника»",
+          "Откройте скачанный APK-файл из папки Загрузки",
+          "Следуйте инструкциям на экране для завершения установки",
+          "После установки можете отключить «неизвестные источники» для безопасности"
+        ]
+      }
+    },
+    "features": {
+      "title": "Возможности приложения",
+      "items": [
+        "Доступ ко всем техникам без интернета",
+        "Управляемые дыхательные упражнения с тактильной обратной связью",
+        "Интерактивные инструменты заземления и визуализации",
+        "Отслеживание прогресса и избранные техники",
+        "Поддержка темной темы для комфортного использования в любое время",
+        "Без рекламы, без отслеживания, полностью бесплатно и с открытым кодом"
+      ]
+    },
+    "privacy": {
+      "title": "Ваша конфиденциальность важна",
+      "description": "Все ваши данные остаются на вашем устройстве. Мы не собираем, не храним и не передаем никакую личную информацию. Аккаунт не требуется."
+    },
+    "support": {
+      "description": "Нужна помощь с приложением или есть вопросы?",
+      "link": "Перейти на страницу поддержки"
+    },
+    "screenshots": {
+      "title": "Предпросмотр приложения",
+      "hint": "Прокрутите, чтобы увидеть больше"
     }
   }
 }
