--- a/i18n/locales/es/navigation.json
+++ b/i18n/locales/es/navigation.json
@@ -2,6 +2,10 @@
   "navigation": {
     "techniques": "Todas las Técnicas",
     "github": "GitHub",
+    "mobile": "Aplicación Móvil",
+    "menu": "Menú",
+    "openMenu": "Abrir menú",
+    "closeMenu": "Cerrar menú",
     "skipToMain": "Saltar al contenido principal"
   },
   "header": {
