Add language dropdown in header

--- a/i18n/locales/en/navigation.json
+++ b/i18n/locales/en/navigation.json
@@ -6,7 +6,9 @@
     "menu": "Menu",
     "openMenu": "Open menu",
     "closeMenu": "Close menu",
-    "skipToMain": "Skip to main content"
+    "skipToMain": "Skip to main content",
+    "language": "Language",
+    "selectLanguage": "Select Language"
   },
   "header": {
     "title": "AnxietyAidTools",
