Update Hindi links

--- a/i18n/locales/hi/pages.json
+++ b/i18n/locales/hi/pages.json
@@ -37,23 +37,23 @@
       "list": [
         {
           "name": "निमहांस (NIMHANS)",
-          "url": "https://nimhans.ac.in",
-          "description": "राष्ट्रीय मानसिक स्वास्थ्य और तंत्रिका विज्ञान संस्थान - भारत का प्रमुख मानसिक स्वास्थ्य संस्थान जो व्यापक मानसिक स्वास्थ्य सेवाएं, शिक्षा और अनुसंधान प्रदान करता है।"
+          "url": "https://nimhans.ac.in/",
+          "description": "भारत का प्रमुख संस्थान जो मानसिक स्वास्थ्य और तंत्रिका विज्ञान में व्यापक रोगी देखभाल, अनुसंधान और शैक्षिक कार्यक्रम प्रदान करता है।"
         },
         {
-          "name": "वंदरेवाला फाउंडेशन",
-          "url": "https://www.vandrevalafoundation.com",
-          "description": "24/7 मुफ्त मानसिक स्वास्थ्य हेल्पलाइन (1860-2662-345) और परामर्श सेवाएं प्रदान करता है। चिंता, अवसाद और अन्य मानसिक स्वास्थ्य चिंताओं के लिए पेशेवर सहायता।"
+          "name": "द लिव लव लाफ फाउंडेशन",
+          "url": "https://www.thelivelovelaughfoundation.org/",
+          "description": "तनाव, चिंता और अवसाद जैसे मानसिक स्वास्थ्य मुद्दों के बारे में जागरूकता बढ़ाने के लिए समर्पित गैर-लाभकारी संगठन, पूरे भारत में संसाधन और कार्यक्रमों के साथ।"
         },
         {
-          "name": "iCall - TISS",
-          "url": "https://icallhelpline.org",
-          "description": "टाटा इंस्टीट्यूट ऑफ सोशल साइंसेज द्वारा संचालित मनोसामाजिक हेल्पलाइन। प्रशिक्षित परामर्शदाताओं द्वारा मुफ्त, गोपनीय टेलीफोन और ईमेल परामर्श प्रदान करता है।"
+          "name": "संगत",
+          "url": "https://www.sangath.in/",
+          "description": "सभी आयु समूहों के लिए सुलभ मनोसामाजिक हस्तक्षेप और समुदाय-आधारित मानसिक स्वास्थ्य सेवाएं प्रदान करने पर केंद्रित।"
         },
         {
-          "name": "मनस्थली",
-          "url": "https://www.manasthali.org",
-          "description": "भारत में मानसिक स्वास्थ्य जागरूकता और सहायता सेवाओं को बढ़ावा देने वाला गैर-लाभकारी संगठन। संसाधन, परामर्श और सामुदायिक सहायता प्रदान करता है।"
+          "name": "द बनयान",
+          "url": "https://thebanyan.org/",
+          "description": "मानसिक स्वास्थ्य चुनौतियों का सामना कर रहे बेघर और कमजोर व्यक्तियों के लिए देखभाल, पुनर्वास और सामाजिक सहायता प्रदान करता है।"
         }
       ]
     }
